--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
 
 <body>
   
-  <button class="startgame" id="startgame"> Press to Play </button>
+  <div class="title-card">
+    <h1>The Ultimate Showdown</h1>
+  </div>
 
+  <div class="vs">
+    <div>Human</div><div>VS</div><div>Machine</div>
+  </div>
+  <div class="choices">
+  <button id="rock">Rock</button> <button id="paper">Paper</button> <button id="scissors">Scissors</button>
+  </div>
+  <div id="message">Click a choice to begin!</div>
+  <div class="winloss">
+    <div class="playerstats">
+    <div id="playerWinsLabel">0</div> 
+    <div>Wins</div>
+    </div>
+    <div class="computerstats">
+    <div id="computerWinsLabel">0</div>
+    <div>Wins</div>
+    </div>
+  </div>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <div class="footer">SquigSquag on GitHub</div>
 </body>
 
 </html>
